<resources>
    <!-- VK SDK API key-->
    <integer name="com_vk_sdk_AppId">5379064</integer>

    <!-- App name-->
    <string name="app_name">VKMessenger</string>

    <!-- Activities-->
    <string name="title_activity_main">VKMessenger</string>
    <string name="title_activity_selected_dialog">SelectedDialogActivity</string>
    <string name="title_activity_wall_post">WallPostActivity</string>

    <!-- Menu-->
    <string name="action_settings">Settings</string>

    <!-- Document size-->
    <string name="size_byte">байт</string>
    <string name="size_kilo_byte">кб</string>
    <string name="size_mega_byte">Мб</string>
    <string name="size_giga_byte">Гб</string>

    <!-- Other-->
    <string name="title_login">Войти</string>
    <string name="wall_post">Запись на стене</string>
    <string name="send_message_hint">Введите сообщение…</string>
    <string name="button_send_message_text">Send</string>
    <string name="link_image_view_content_desc">Фото заголовка</string>
    <string name="audio_image_view_content_desc">Воспроизвести аудиозапись</string>
    <string name="document_text">Документ</string>
    <string name="dialog_avatar">Аватар диалога</string>
    <string name="dialog_last_message_author">Автор последнего сообщения</string>
    <string name="chat_user_avatar">Аватар пользователя</string>
    <string name="navigation_item_dialogs">Диалоги</string>
    <string name="navigation_item_friends">Друзья</string>
    <string name="navigation_item_settings">Настройки</string>
    <string name="navigation_item_help_name">Помощь</string>
    <string name="navigation_view_open">open</string>
    <string name="navigation_view_close">close</string>
    <string name="friends">Мои друзья</string>
    <string name="choose_user">Выберите собеседника</string>
    <string name="pref_title_application_version">1.0</string>
    <string name="invisible_mode">Режим невидимки</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="mode_on">Включен</string>
    <string name="mode_off">Выключен</string>
    <string name="about_us_email">anton.poltoratskii@gmail.com</string>
    <string name="about_us_title">Обратная связь с нами</string>
    <string name="about_us_text">Мы ценим Ваши отзывы и постараемся учитывать пожелания, которые Вы может написать на нашу электронную почту</string>
    <string name="abous_us_app_version">VK Messenger 1.0</string>
    <string name="title_contacts_activity">О разработчиках</string>
    <string name="navigation_item_abous_devs">О разработчиках</string>
    <string name="internet_connection_exception">Пожалуйста, проверьте Ваше интернет-соединение!</string>

</resources>
