<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_horizontal"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="25dp"
        android:contentDescription="@string/app_name"
        />

    <TextView
        android:id="@+id/about_us_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abous_us_app_version"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="25dp"
        android:background="@color/about_us_horizontal_divider_color"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us_title"
        android:textColor="@color/about_us_title_color"
        android:textSize="18sp"
        android:layout_margin="25dp"
        />

    <TextView
        android:id="@+id/feedback_email_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us_email"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        android:autoLink="email"
        android:textColorLink="@color/about_us_link_color"
        />

    <TextView
        android:id="@+id/feedback_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us_text"
        android:textSize="18sp"
        android:textColor="@color/about_us_title_color"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        />

</LinearLayout>